[project]
name = "monte-carlo-option-pricing"
version = "0.1.0"
description = "European option pricing with risk-neutral Monte Carlo simulation, validated against Black-Scholes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.urls]
Repository = "https://github.com/imtisaalm/monte-carlo-option-pricing"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["monte_carlo_pricing"]
